# Paribus

./: .env.example  .gitignore  Dockerfile  README.md  api_scenarios_decision_tree.md  docker-compose.yml  paribus_live_postman_env.json  paribus_openapi.json  paribus_postman_collection.json  paribus_postman_env.json  pyproject.toml  render.yaml  run.sh  runtest.sh  setup.sh  task.txt  test.csv  test_15.csv  test_30.csv  test_live.py  test_single.csv  test_size_limits.py  testwithfailor.csv
app/: __init__.py  clients.py  config.py  dependencies.py  exceptions.py  main.py  models.py  parser.py  processor.py  schemas.py  store.py
tests/: conftest.py  test_bulk_processing.py
