[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paribus-bulk-processing"
version = "0.1.0"
description = "Bulk hospital CSV processing system for the Paribus challenge"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
packages = ["app"]

